<resources>
    <string name="app_name">Car service</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="signup_screen">SIGNUP SCREEN</string>
    <string name="signup">SIGNUP</string>
    <string name="already_registered">Already registered ?</string>
    <string name="login">Login</string>
    <string name="login_as">Login as:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="profile">Profile</string>
    <string name="add_service">Add service</string>
    <string name="cart">Cart</string>
    <string name="logout">logout</string>
    <string name="add_service2">ADD SERVICE</string>
    <string name="service_title">service title:</string>
    <string name="title">title</string>
    <string name="car_type">car type:</string>
    <string name="car_type2">car type</string>
    <string name="car_model">car model:</string>
    <string name="model">model</string>
    <string name="price">Price(руб)</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="hh_mm">HH:mm</string>
    <string name="service_details">SERVICE DETAILS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="order">ORDER</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="my_orders">my orders</string>
    <string name="phone_number">phone number</string>
    <string name="error_loading_details">Error loading details!</string>
    <string name="add_master">add master</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="edit_master">edit masters</string>
    <string name="masters">Masters</string>
    <string name="busy_times">busy times:</string>
    <string name="show">show</string>
    <string name="comment">comment:</string>
    <string name="save">save</string>
    <string name="master_id">master id:</string>
    <string name="add_master_DIALOG">ADD MASTER</string>
    <string name="name">name</string>
    <string name="add">add</string>
    <string name="descreiption">descreiption</string>
    <string name="descreption">descreption</string>
    <string name="description">description</string>
    <string name="recommended_masters">recommended masters</string>
    <string name="add_to_order_list">add to order list</string>
    <string name="orders_history">orders history</string>
    <string name="location">location</string>
    <string name="_375_25_535_73_46">+375 25 535-73-46</string>
    <string name="address">Address</string>
    <string name="vulica_lieanida_biady_2">vulica Lieanida Biady, 2Б</string>
    <string name="clear_all">clear all</string>
    <string name="delele">delele</string>
    <string name="delelte">delelte</string>
    <string name="error_n_something_went_wrong">Error! \n something went wrong!</string>
    <string name="surname">surname</string>
    <string name="date_and_time">date and time</string>
    <string name="edit_service">EDIT SERVICE</string>
    <string name="master">Master</string>
    <string name="buyer">Buyer</string>
    <string name="client_s_comment">client\'s comment</string>
    <string name="master_s_comment">master\'s comment</string>
    <string name="language">language</string>
    <string name="select_a_language">Select a language</string>
    <string name="ok">ok</string>
    <string name="language_already_picked">language already picked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>