<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".ui.admins_ui.fragments.addMaster.AddMasterDialogFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text = "@string/add_master_DIALOG"/>

    <EditText
        android:id="@+id/etAddMasterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/etAddMasterSurName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/surname"/>

    <Button
        android:id="@+id/btnAddMaster"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_bgnd"
        android:text="@string/add"
        android:textColor="@color/white"/>
    
</LinearLayout>