<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shared.orderDetails.OrderDetailsFragment">

    <TextView
        android:id="@+id/tvErrOrderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:text="@string/error_loading_details"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/llSerDet"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_details"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="64dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_title"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvOrderDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_type"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvOrderDetailsCarType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">
                <TextView
                    android:id="@+id/te"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_model"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOrderDetailsCarModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tvOrderDetailsPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/master" />

                <TextView
                    android:id="@+id/tvOrderDetailsMaster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buyer" />

                <TextView
                    android:id="@+id/tvOrderDetailsBuyer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <TextView
                    android:id="@+id/tvOrderDetailsPhoneNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_and_time" />

                <TextView
                    android:id="@+id/tvOrderDetailsTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/client_s_comment"
                android:layout_marginTop="20sp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvClientCommentDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/master_s_comment"
                android:layout_marginTop="20sp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvMasterCommentDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btnAddComment"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:background="@drawable/add_comment_icon"/>

            <EditText
                android:id="@+id/etAddCommentMaster"
                android:hint="@string/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnSaveOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_bgnd"
                android:text="@string/save"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>


</FrameLayout>