<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.admins_ui.fragments.editmaster.EditMasterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:text="@string/masters"
        android:layout_gravity="center|top"/>

    <Spinner
        android:id="@+id/spMyMasters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tvCurMasterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvMasterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:text="@string/master_id"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busy_times"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBusyTimes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnShowMaster"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bgnd"
        android:textColor="@color/white"
        android:text="@string/show"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>

</LinearLayout>